# nbq

./: .codespellrc  README.md  mkdocs.yml  pyproject.toml  specification.md
docs/: index.md  style.css  usage.md
docs/api_docs/: hello_world.md  nbq.md  nbqueue.md
docs/notebooks/: example.py
examples/: demo.ipynb
nbqueue/2025-08-15T12-03-27Z/: latest_run  state.json
nbqueue/2025-08-15T12-03-27Z/output/1755259407582-b0a6/: executed.ipynb  input.ipynb  source.py  status.json
nbqueue/2025-08-15T12-03-27Z/output/1755263400621-c1bd/: executed.ipynb  input.ipynb  status.json
src/nbq/: __init__.py
src/nbqueue/: __init__.py  cli.py  exec.py  ps.py  state.py  utils.py  worker.py
