[project]
name = "nbqueue"
authors = [{ name = "Harry Eslick", email = "your.email@example.com" }]
description = "A simple queue for executing long-running .ipynb notebooks in sequence"
readme = "README.md"
requires-python = ">=3.9"

dynamic = ["version"]
dependencies = [
    "rich",
    "typer>=0.12.5",
    "jupytext>=1.16.4",
    "papermill>=2.6.0",
    "nbconvert>=7.16.4",
    "ipykernel>=6.29.5"
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.47",
    "mkdocs-jupyter>=0.25.1",
    "mkdocstrings[python]>=0.27.0",
    "bandit[toml]==1.7.5",
    "pre-commit==3.3.1",
    "pylint==2.17.4",
    "pylint_junit",
    "pytest-cov==4.0.0",
    "pytest-mock<3.10.1",
    "pytest-runner",
    "pytest==7.3.1",
    "pytest-github-actions-annotate-failures",
    "plotly>=5.24.1",
    "mkdocs-git-revision-date-plugin>=0.3.2",
]

[project.scripts]
nbq = "nbqueue.cli:main"

# [project.urls]
# Documentation = "https://harryeslick.github.io/"
# Source = "https://github.com/harryeslick/"


[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.coverage.run]
branch = true


[tool.pytest.ini_options]
addopts = "--cov-report term --cov src --cov-fail-under 0 --cov-append -m 'not integration'"
pythonpath = ["src"]
testpaths = "tests"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/nbqueue/__init__.py"
